--- a/.github/workflows/autocheck.yml
+++ b/.github/workflows/autocheck.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - name: 'Checkout codes'
         uses: actions/checkout@v2
+      - uses: actions/setup-node@v2-beta
+        with:
+          node-version: '16'
       - name: 'Setup python'
         uses: actions/setup-python@v2
         with:
